--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
              <artifactId>graphviz-java</artifactId>
              <version>0.18.1</version>
          </dependency>
+
+
+             <!-- JUnit 5 -->
+         <dependency>
+             <groupId>org.junit.jupiter</groupId>
+             <artifactId>junit-jupiter-engine</artifactId>
+             <version>5.9.1</version>
+             <scope>test</scope>
+         </dependency>
+
      </dependencies>
     <build>
         <plugins>
